--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artemis",
+  "name": "artemis-css",
   "version": "0.1.0",
   "description": "A nice css library for bootstrap 5",
   "main": "README.md",
