--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "artemis-css",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A nice css library for bootstrap 5",
   "main": "README.md",
   "scripts": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dianedelallee/artemis.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/dianedelallee"
   },
   "keywords": [
     "CSS",
