--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "artemis-css",
-  "version": "0.1.3",
-  "description": "A nice css library for bootstrap 5",
+  "version": "0.1.4",
+  "description": "A nice css library to provide pastel elements to include in your website",
   "main": "README.md",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +12,8 @@
   },
   "keywords": [
     "CSS",
-    "Bootstrap",
-    "Animate"
+    "Buttons",
+    "Forms"
   ],
   "author": "Diane Delallee <diane.delallee@gmail.com> (https://fatalement.com)",
   "license": "MIT",
