--- a/.github/workflows/artemis-bot.yml
+++ b/.github/workflows/artemis-bot.yml
@@ -2,9 +2,8 @@ name: Artemis bot
 
 on:
   schedule:
-    - cron:  '* * * * *' 
-  push:
-    branches: [ master ]
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/5 * * * *'
 
 jobs:
   build:
