--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "artemis-css",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "A nice css library to provide pastel elements to include in your website",
   "main": "README.md",
   "scripts": {
@@ -15,7 +15,7 @@
     "Buttons",
     "Forms"
   ],
-  "author": "Diane Delallee <diane.delallee@gmail.com> (https://fatalement.com)",
+  "author": "Diane Delallee <diane.delallee@gmail.com> (https://www.fatalement.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dianedelallee/artemis/issues"
