--- a/.github/workflows/artemis-bot.yml
+++ b/.github/workflows/artemis-bot.yml
@@ -3,7 +3,7 @@ name: Artemis bot
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 */6 * * *'
+    - cron:  '0 1 * * 1'
   workflow_dispatch: 
 
 jobs:
